--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
         <p>Welcome to the chat app!</p>
 
         <ol id="messages">
-            
+
         </ol>
         <form id="message-form" action="">
             <input name="message" type="text" placeholder="Send something.."/>
             <button onclick="">Send</button>
         </form>
+        <button id="send-location">Send Location</button>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.2.1.min.js"></script>
